--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ node_modules/
 npm-debug.log
 yarn-error.log
 .phpunit.result.cache
+.project
+.buildpath
+.settings/
 
 # Laravel 4 specific
 bootstrap/compiled.php
